--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,13 +23,12 @@ jobs:
     - uses: actions/checkout@v3
     - name: update vm
       run: sudo apt upgrade -y
-    - name: setup Firefox
-      run: sudo apt install -y firefox
     - name: Set up JDK 11
       uses: actions/setup-java@v3
       with:
         java-version: '11'
         distribution: 'temurin'
         cache: maven
-    - name: Run all Tests with Maven
+    - name: Install Firefox and Run all Tests with Maven
+      run: sudo apt install -y firefox    
       run: mvn clean verify
