--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,10 +21,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: update vm
-      run: sudo apt upgrade -y
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
+    - uses: actions/setup-java@v3
       with:
         java-version: '11'
         distribution: 'temurin'
