--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,11 +21,15 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - uses: actions/setup-java@v3
+    - name: update vm
+      run: sudo apt upgrade -y
+    - name: Set up JDK 11
+      uses: actions/setup-java@v3
       with:
         java-version: '11'
         distribution: 'temurin'
         cache: maven
-    - name: Run Unit Tests with Maven
-      # run: sudo apt install -y firefox    
-      run: mvn clean test
+    - name: Install Firefox
+      run: sudo apt install -y firefox    
+    - name: run tests
+      run: mvn clean verify
