--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,12 @@
       <artifactId>junit</artifactId>
       <version>4.11</version>
     </dependency>
+    <dependency>
+    <groupId>io.github.bonigarcia</groupId>
+    <artifactId>webdrivermanager</artifactId>
+    <version>5.3.1</version>
+    <scope>test</scope>
+</dependency>
 
 
   </dependencies>
