--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,8 +21,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    # - name: update vm
-    #   run: sudo apt upgrade -y
+    - name: update vm
+      run: sudo apt upgrade -y
     - name: Set up JDK 11
       uses: actions/setup-java@v3
       with:
